Changes due to PR review