@@ -36,9 +36,8 @@ import org.jaccept.structure.ExtendedTestCase;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-
 import java.net.URL;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
@@ -64,7 +63,7 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         addDescription("Tests that the collector calls the GetFileClient");
         addStep("Define variables", "No errors");
         String pillarID = "TEST-PILLAR";
-        ContributorQuery[] contributorQueries = ContributorQueryUtils.createFullContributorQuery(Arrays.asList(pillarID));
+        ContributorQuery[] contributorQueries = ContributorQueryUtils.createFullContributorQuery(List.of(pillarID));
         String auditTrailInformation = "audit trail for this test";
         
         addStep("Setup a GetFileIDsClient for test purpose.", "Should be OK.");
@@ -73,16 +72,16 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         EventHandler eventHandler = mock(EventHandler.class);
         
         addStep("Call the getFileIDs on the collector.", "Should go directly to the GetFileIDsClient");
-        collector.getFileIDs(collectionID, Arrays.asList(pillarID), auditTrailInformation, contributorQueries, eventHandler);
+        collector.getFileIDs(collectionID, List.of(pillarID), auditTrailInformation, contributorQueries, eventHandler);
         verify(getFileIDsClient).getFileIDs(eq(collectionID), any(), any(), any(), any(EventHandler.class));
 
         
         addStep("Call the getFileIDs on the collector four times more.", 
                 "The GetFileIDsClient should have been called 5 times.");
-        collector.getFileIDs(collectionID, Arrays.asList(pillarID), auditTrailInformation, contributorQueries, null);
-        collector.getFileIDs(collectionID, Arrays.asList(pillarID), auditTrailInformation, contributorQueries, null);
-        collector.getFileIDs(collectionID, Arrays.asList(pillarID), auditTrailInformation, contributorQueries, null);
-        collector.getFileIDs(collectionID, Arrays.asList(pillarID), auditTrailInformation, contributorQueries, null);
+        collector.getFileIDs(collectionID, List.of(pillarID), auditTrailInformation, contributorQueries, null);
+        collector.getFileIDs(collectionID, List.of(pillarID), auditTrailInformation, contributorQueries, null);
+        collector.getFileIDs(collectionID, List.of(pillarID), auditTrailInformation, contributorQueries, null);
+        collector.getFileIDs(collectionID, List.of(pillarID), auditTrailInformation, contributorQueries, null);
         verify(getFileIDsClient, times(5)).getFileIDs(eq(collectionID), any(), any(), any(), any());
         
         verifyNoMoreInteractions(getFileIDsClient);
@@ -96,7 +95,7 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         addStep("Define variables", "No errors");
         String pillarID = "TEST-PILLAR";
         ContributorQuery[] contributorQueries = ContributorQueryUtils.createFullContributorQuery(
-                Arrays.asList(pillarID));
+                List.of(pillarID));
         ChecksumSpecTYPE csType = new ChecksumSpecTYPE();
         csType.setChecksumType(ChecksumType.MD5);
         String auditTrailInformation = "audit trail for this test";
@@ -108,15 +107,15 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         EventHandler eventHandler = mock(EventHandler.class);
         
         addStep("Call the getChecksumsClient on the collector.", "Should go directly to the GetChecksumsClient");
-        collector.getChecksums(collectionID, Arrays.asList(pillarID), csType, null, auditTrailInformation, contributorQueries, eventHandler);
+        collector.getChecksums(collectionID, List.of(pillarID), csType, null, auditTrailInformation, contributorQueries, eventHandler);
         verify(getChecksumsClient).getChecksums(eq(collectionID), any(), any(), any(ChecksumSpecTYPE.class), any(), any(EventHandler.class), anyString());
         
         addStep("Call the getChecksumsClient on the collector four times more.", 
                 "The GetChecksumsClient should have been called 5 times.");
-        collector.getChecksums(collectionID, Arrays.asList(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
-        collector.getChecksums(collectionID, Arrays.asList(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
-        collector.getChecksums(collectionID, Arrays.asList(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
-        collector.getChecksums(collectionID, Arrays.asList(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
+        collector.getChecksums(collectionID, List.of(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
+        collector.getChecksums(collectionID, List.of(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
+        collector.getChecksums(collectionID, List.of(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
+        collector.getChecksums(collectionID, List.of(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
         verify(getChecksumsClient, times(5)).getChecksums(eq(collectionID), any(), any(), any(ChecksumSpecTYPE.class), any(),
                 any(), anyString());
                 
@@ -193,7 +192,7 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         addStep("Setup variables for the test", "Should be OK");
         String pillarID = "TEST-PILLAR";
         ContributorQuery[] contributorQueries = ContributorQueryUtils.createFullContributorQuery(
-                Arrays.asList(pillarID));
+                List.of(pillarID));
         ChecksumSpecTYPE csType = new ChecksumSpecTYPE();
         csType.setChecksumType(ChecksumType.MD5);
         String auditTrailInformation = "audit trail for this test";
@@ -206,7 +205,7 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         
         addStep("Verify that the collector does not fail, just because the GetChecksumClient does so", 
                 "Should not throw an unexpected exception");
-        collector.getChecksums(collectionID, Arrays.asList(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
+        collector.getChecksums(collectionID, List.of(pillarID), csType, null, auditTrailInformation, contributorQueries, null);
     }
     
     @Test
@@ -216,7 +215,7 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         addStep("Setup variables for the test", "Should be OK");
         String pillarID = "TEST-PILLAR";
         ContributorQuery[] contributorQueries = ContributorQueryUtils.createFullContributorQuery(
-                Arrays.asList(pillarID));
+                List.of(pillarID));
         String auditTrailInformation = "audit trail for this test";
 
         addStep("Setup a DyingGetFileIDsClient for test purpose.", "Should be OK.");
@@ -226,7 +225,7 @@ public class IntegrityInformationCollectorTest extends ExtendedTestCase {
         
         addStep("Verify that the collector does not fail, just because the GetChecksumClient does so", 
                 "Should not throw an unexpected exception");
-        collector.getFileIDs(collectionID, Arrays.asList(pillarID), auditTrailInformation, contributorQueries, null);
+        collector.getFileIDs(collectionID, List.of(pillarID), auditTrailInformation, contributorQueries, null);
     }
     
     @Test
